replace resume docs with resume pdf link

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>Redirecting to Resume</title>
   <meta http-equiv="refresh"
-    content="0; URL=https://docs.google.com/document/d/1KIiKibXKa0AqnLrGATXZ4B3dmnNYToDe9aDAdlTmW-0/edit?usp=sharing">
+    content="0; URL=https://drive.google.com/file/d/1JblOihOAGNI7uyuZLapYjjXEUYiN_1G3/view?usp=sharing">
   <link rel="canonical"
-    href="https://docs.google.com/document/d/1KIiKibXKa0AqnLrGATXZ4B3dmnNYToDe9aDAdlTmW-0/edit?usp=sharing">
+    href="https://drive.google.com/file/d/1JblOihOAGNI7uyuZLapYjjXEUYiN_1G3/view?usp=sharing">
 </head>
 
 <body>
   <p>Redirecting to <a
-      href="https://docs.google.com/document/d/1KIiKibXKa0AqnLrGATXZ4B3dmnNYToDe9aDAdlTmW-0/edit?usp=sharing">resume</a>.
+      href="https://drive.google.com/file/d/1JblOihOAGNI7uyuZLapYjjXEUYiN_1G3/view?usp=sharing">resume</a>.
     If not automatic, click here.</p>
 </body>
 
